tests/NormalTests/paczka1/fuzzy1/53359527.err
Error in line 2: A444 S208 43,8
Error in line 1: rm3 A710 72,8
Error in line 4: JXVIqFg2 A12 37,3
Error in line 8: JXVIqFg2 A710 40,0
Error in line 13: dVfq A710 42,7
Error in line 17: A444 A710 55,6
Error in line 20: A444 S208 99,6
Error in line 30: ytq5Peq Aw10 41,6
Error in line 34: FvcRSheI S208 181,0
Error in line 35: FvcRSheI A444 82,4
